--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,22 @@ body {
   background-color: grey;
   font-style:courier new;
   }
-  
+
 .my-class {
+  margin: 12px;
+  border: solid black
+}
+
+.box1 {
+  width: 20%;
+  box-align: center;
+  border: solid black;
+  border-width: 1px;
+  background-color: blue
+  margin-bottom: 10px;
+}
+
+.box2 {
   margin: 12px;
   border: solid black
 }
